log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Fri 31 Mar 2023 02:13:36 PM UTC: 
 arraylist.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:3: error: expected ‘,’ or ‘;’ before ‘if’
   16 |   if(lista==NULL)
      |   ^~
Compilation failed
9c64fce
Fri 31 Mar 2023 02:14:05 PM UTC: 
 arraylist.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:3: error: expected ‘,’ or ‘;’ before ‘if’
   16 |   if(lista==NULL)
      |   ^~
Compilation failed
9af9923
Fri 31 Mar 2023 02:14:12 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c330703
Fri 31 Mar 2023 05:04:40 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:34:8: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   34 |   if(l[size]->data != NULL)
      |        ^~~~
      |        dysize
arraylist.c:34:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3131bf4
Fri 31 Mar 2023 05:05:20 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:34:15: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   34 |   if( l->data[size] != NULL)
      |               ^~~~
      |               dysize
arraylist.c:34:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d4d0e91
Fri 31 Mar 2023 05:05:38 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f0b42ed
Fri 31 Mar 2023 05:06:48 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
22e5ab9
Fri 31 Mar 2023 05:07:00 PM UTC: 
 arraylist.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|5
total_score: 15/70
cdec821
Fri 31 Mar 2023 05:08:03 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
56b8d1f
Fri 31 Mar 2023 05:09:52 PM UTC: 
 arraylist.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:41:43: error: expected ‘;’ before ‘l’
   41 |     l->data = realloc(data, l->capacity+1)
      |                                           ^
      |                                           ;
   42 |     l->capacity++;
      |     ~                                      
Compilation failed
f8b95e0
Fri 31 Mar 2023 05:10:03 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9942812
Fri 31 Mar 2023 05:10:41 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
71a0c97
Fri 31 Mar 2023 05:11:57 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
eb0dfcf
Fri 31 Mar 2023 05:12:13 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
ad34f80
Fri 31 Mar 2023 05:13:17 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:41:46: error: invalid operands to binary * (have ‘void *’ and ‘long unsigned int’)
   41 |     l->data = realloc(data, (l->capacity)*2) * sizeof(void*);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^
      |               |
      |               void *
Compilation failed
bd46585
Fri 31 Mar 2023 05:13:29 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:41:56: error: expected expression before ‘void’
   41 |     l->data = realloc(data, (l->capacity)*2) * sizeof(*void);
      |                                                        ^~~~
Compilation failed
4df0a53
Fri 31 Mar 2023 05:13:47 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:41:46: error: invalid operands to binary * (have ‘void *’ and ‘long unsigned int’)
   41 |     l->data = realloc(data, (l->capacity)*2) *sizeof(void*) );
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^
      |               |
      |               void *
arraylist.c:41:60: error: expected ‘;’ before ‘)’ token
   41 |     l->data = realloc(data, (l->capacity)*2) *sizeof(void*) );
      |                                                            ^~
      |                                                            ;
arraylist.c:41:61: error: expected statement before ‘)’ token
   41 |     l->data = realloc(data, (l->capacity)*2) *sizeof(void*) );
      |                                                             ^
Compilation failed
eda83d7
Fri 31 Mar 2023 05:14:26 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
49f3cdf
Fri 31 Mar 2023 05:15:50 PM UTC: 
 arraylist.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:36:60: error: expected ‘;’ before ‘}’ token
   36 |   l->data =  realloc(data, (l->capacity*2) * sizeof(void*))
      |                                                            ^
      |                                                            ;
   37 |   }
      |   ~                                                         
Compilation failed
d05cdb3
Fri 31 Mar 2023 05:15:56 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
0d60426
Fri 31 Mar 2023 05:16:36 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:37:19: error: expected ‘;’ before ‘}’ token
   37 |     l->capacity*=2
      |                   ^
      |                   ;
   38 |   }
      |   ~                
Compilation failed
27e0733
Fri 31 Mar 2023 05:16:40 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0493265
